--- a/2017/0703.md
+++ b/2017/0703.md
@@ -1,7 +1,22 @@
 # Log 0703
 -----------------
 ## 百度地图黑屏
-  解决方法：将MapView换成TextureMapView
+  解决方法：将MapView换成TextureMapView，开启硬件加速         android:hardwareAccelerated="true"
+>- 硬件加速的好处
+>
+>硬件加速对渲染的流畅度有大幅提升。
+在开启硬件加速后，上下拖动列表的感觉是没有跳帧的平滑拖动感，如果没有硬件加速，拖动时能感受到有丢帧。
+在窗体切换动画上也类似，硬件加速开关对切换动画的影响很大。
+对于video、canvas、webgl，没有硬件加速是没法商用的，Android webview里video标签里的视频如果没有硬件加速会看不到画面。
+>- 硬件加速的代价
+>
+>硬件加速属于双缓冲机制，使用显存进行页面渲染（使用较少的物理内存），导致更频繁的显存操作，可能引起以下现象：
+白屏、花屏、闪屏；
+低RAM内存配置手机上闪退。
+虽然新出的Android5.0的手机整体配置较高（显存较大），但是如果页面中使用大量图片或者过于复杂的CSS样式时同样容易出现白屏、花屏、闪屏现象。
+
+
+  谷歌搜索：android 地图黑屏 site:bbs.lbsyun.baidu.com
 ## ViewPager选用
 <https://github.com/lsjwzh/RecyclerViewPager>
 
